--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mysql2": "^3.14.1"
   },
   "devDependencies": {
+    "@types/node": "^24.0.3",
     "drizzle-kit": "^0.31.1",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
