--- a/api/package.json
+++ b/api/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^5.0.3",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
+    "express": "^5.1.0",
     "mysql2": "^3.14.1"
   },
   "devDependencies": {
